Add UpdateCheckPlus itself to config (1.0.1)

--- a/configuration.json
+++ b/configuration.json
@@ -24,6 +24,7 @@
 		"ProtocolLib": 1997,
 		"Scoreboard-revision": 14754,
 		"SuperVanish": 1331,
+		"UpdateCheckPlus": 82812,
 		"Vault": 34315,
 		"VoidGenerator": 25391,
 		"Votifier": 13449,
