Add EasierBackup to configuration.json

--- a/configuration.json
+++ b/configuration.json
@@ -9,6 +9,7 @@
 		"CoreProtect": 8631,
 		"ChestShop": 51856,
 		"dynmap": 274,
+		"EasierBackup": 82921,
 		"Essentials": 9089,
 		"EssentialsAntiBuild": 9089,
 		"EssentialsChat": 9089,
